git commit -m “added images.” :wq

--- a/Capstone-Group2/get-involved.html
+++ b/Capstone-Group2/get-involved.html
@@ -8,12 +8,16 @@
     <title>Get Involved</title>
 </head>
 <body>
-    
+ <nav>
+    <a href = "index.html">Home</a>
+    <a href = "about.html">About</a>
+    <a href = "adopt.html">Adopt</a>
+    <a href = "get-involved.html">Get Involved</a>
+</nav>   
 
-
-
-
-
+<div class="header">
+    <img src="Capstone-Group2\Images\get-involved-header.jpg" alt="blonde woman holding dog">
+</div>
     <script src="/script.js"></script>
 </body>
 </html>
