--- a/Capstone-Group2/get-involved.html
+++ b/Capstone-Group2/get-involved.html
@@ -16,7 +16,46 @@
 </nav>   
 
 <div class="header">
-    <img src="Capstone-Group2\Images\get-involved-header.jpg" alt="blonde woman holding dog">
+    <img src="Images/get-involved-header.jpg" alt="blonde woman holding dog">
+<h1>Get Involved</h1>
+</div>
+<div class="support">
+    <h2>Ways to Support</h2>
+    <p class="support-text">There are plenty of ways you can fit our mission to 
+        save animals into your life…actually, after trying it, 
+        you just might find yourself re-evaluating what you really do have time for,
+         because what matters to you will become crystal-clear.</p>
+</div>
+<div class="volunteer">
+    <h2 class="volunteer-header">Volunteer</h2>
+    <p class="volunteer-text">Motley Zoo Animal Rescue is a purely volunteer-based organization dedicated to helping animals.  
+        We are always in need of caring people to volunteer - 
+        we have a variety of duties and tasks for which we always need help! E-mail us: volunteer@motleyzoo.org.
+    </p>
+    <button type="button">Apply Here</button>
+</div>
+<div class="foster">
+    <h2 class="foster-header">
+        Foster
+    </h2>
+    <p class="foster-text">This is the best way to get your hands on some furry friends. 
+        Fosters take a pet into their home, and watch him/ her like one of their own, 
+        until a “fur-ever” home is found.We encourage you to check out more about fostering here.
+    </p>
+    <button type="button">Apply Here</button>
+</div>
+<div class="donate">
+    <h2 class="donate-header">Donate
+    </h2>
+    <p class="donate-text">Any donation made - no matter how small - beats giving absolutely nothing at all.
+         Plus, you can maximize your impact with a recurring gift!
+        </p>
+        <button type="button">Donate Here</button>
+</div>
+<div class="footer">
+    <h1 class="footer-header">Motley Zoo Animal Rescue
+ </h1>
+ <h3 class="follow-info">Follow Us</h3>
 </div>
     <script src="/script.js"></script>
 </body>
