Updated Html page

--- a/Capstone-Group2/get-involved.html
+++ b/Capstone-Group2/get-involved.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Get Involved</title>
 </head>
 <body>
  <nav>
+    <img src="Images\Motley logo.jpg" alt="Motley Zoo logo" width="150" class="logo">
     <a href = "index.html">Home</a>
     <a href = "about.html">About</a>
     <a href = "adopt.html">Adopt</a>
@@ -20,13 +22,14 @@
 <h1>Get Involved</h1>
 </div>
 <div class="support">
-    <h2>Ways to Support</h2>
+    <h2 class="support-header">Ways to Support</h2>
     <p class="support-text">There are plenty of ways you can fit our mission to 
         save animals into your life…actually, after trying it, 
         you just might find yourself re-evaluating what you really do have time for,
-         because what matters to you will become crystal-clear.</p>
+         because what matters to you will become crystal-clear.</p> 
 </div>
 <div class="volunteer">
+    <img src="Images\puppies 3.jpg" class="support-img" alt="photo of black yorkshire puppy">
     <h2 class="volunteer-header">Volunteer</h2>
     <p class="volunteer-text">Motley Zoo Animal Rescue is a purely volunteer-based organization dedicated to helping animals.  
         We are always in need of caring people to volunteer - 
@@ -35,6 +38,7 @@
     <button type="button">Apply Here</button>
 </div>
 <div class="foster">
+    <img src="Images\kittens.jpg" class="foster-image" alt="group of black and white kittens">
     <h2 class="foster-header">
         Foster
     </h2>
@@ -45,6 +49,7 @@
     <button type="button">Apply Here</button>
 </div>
 <div class="donate">
+    <img src="Images\smiling dog.jpg" class="donate-image" alt="photo of smiling dog">
     <h2 class="donate-header">Donate
     </h2>
     <p class="donate-text">Any donation made - no matter how small - beats giving absolutely nothing at all.
@@ -56,6 +61,19 @@
     <h1 class="footer-header">Motley Zoo Animal Rescue
  </h1>
  <h3 class="follow-info">Follow Us</h3>
+ <a href="#" class="fa fa-facebook"></a>
+<a href="#" class="fa fa-twitter"></a>
+<a href="#" class="fa fa-instagram"></a>
+<a href="#" class="fa fa-vimeo"></a>
+<a href="#" class="fa fa-youtube"></a>
+<a href="#" class="fa fa-pinterest"></a>
+<h4 class="contact-info">Registered 501 (c) (3). EIN: 26-4338166
+    @2023 | Motley Zoo Animal Rescue
+</h4>
+<img src="Images\wa fed.jpg" alt="logo of The Washington Frederation">
+<a href="https://www.adoptapet.com/">
+<img src="Images\Approved-Rescue_Paw-Print_Badge.png" alt="adopt a pet logo">
+</a>
 </div>
     <script src="/script.js"></script>
 </body>
