--- a/Capstone-Group2/index.html
+++ b/Capstone-Group2/index.html
@@ -8,8 +8,74 @@
     <title>Motley Zoo Animal Rescue</title>
 </head>
 <body>
-    
+    <header> 
+        <img src="Images/Motley logo.jpg" alt="logo">
+            <nav>
+                <ul>
+                    <li><a href="">Home</a> </li>
+                    <li> <a href="">About</a> </li>
+                    <li><a href="">Adopt</a> </li>
+                    <li> <a href="">Get Involved</a></li>
+                </ul>
+            </nav>
+        <div>
+            <h1>About</h1>
+                <img src="Images/puppies 2.jpg" alt="image of puppies">
+        </div>
+    </header>
+    <!-- I wasnt sure if we wanted to use ID or Class -->
+    <!-- 
+        The  box image and text pattern we have 
+        is similair througout out all our pages, 
+        I was thinking we can REUSE CLASS 
+        eveywhere let me know what yall think
+    -->
+<div class="our_mission">
+    <div class="row">
+        <h2>Our Mission</h2>
+            <p>Motley Zoo Animal Rescue is dedicated to improving the lives of animals locally, nationally and internationally; alleviating their suffering and elevating their status in society through the rescue and rehabilitation of animals in need and through the education of their community on responsible pet ownership and animal welfare, advocating the value of all animal life, in hopes to end the neglect and abuse of all animals and to end the devastating pet overpopulation through spay and neuter advocacy.</p>
+                <img src="Images/ki" alt="white dog"> 
+    </div>
+</div>
 
+<div class="Philosophy">
+    <div class="row">
+        <h2>Philosophy</h2>
+            <p>We believe that all pets are precious - and none should be left behind! Nor should they be valued by a number at the bottom of a vet bill. We founded this rescue to ensure animals wouldn't fall through the cracks; to provide "someone" to care for them when there is no one else. To date, we have been that "someone" for more than 3,800 animals - many of them medically-needy - with extensive, and expensive, needs. We spare no time or expense in helping our animals become more "adoptable" for you.</p>
+                <img src="Images/kittens.jpg" alt="Three kittens"> 
+    </div>
+</div>
+
+<div class="How_it_works">
+    <div class="row">
+        <h2>How it Works</h2>
+            <p>It is important that the results of our efforts match the immense input of time, energy, funding and quality when it comes to the number of lives saved. The level of care and quality of life is as critical as making sure we are saving as many animals as possible.</p>   
+                <img src="" alt="Lady holding dog"> 
+    </div>
+</div>
+
+<div class="Our_team">
+    <div>
+        <h2>Our Team</h2>
+            <p>It is important that the results of our efforts match the immense input of time, energy, funding and quality when it comes to the number of lives saved. The level of care and quality of life is as critical as making sure we are saving as many animals as possible.</p>
+                <img src="" alt="Image of Team">
+    </div>
+
+</div>
+    <div class="botton">
+        <p>It is important that the results of our efforts match the immense input of time, energy, funding and quality when it comes to the.</p>
+            <button type="button">Join</button>
+</div>
+
+<footer>
+    <h2>Motley ZooAnimal Rescue</h2>
+        <p>Registered 501(c)(3). EIN: 26-4338166 @2023 | Motley Zoo Animal Rescue</p>
+            <img src="Images/wa fed.jpg" alt="washington federation badge">
+                <img src="Images/Approved-Rescue_Paw-Print_Badge.png" alt="adop a peeet badge">
+</footer>
+
+    
+<!-- SOME TIPS: DON'T FORGET TO SAVE, HAVE DIVS FOR DIFFERENT SECTIONS TO HELP YOU FORMAT -->
 
 
     <script src="/script.js"></script>
