Co-authored-by: Diamanefrazier <Diamanefrazier@users.noreply.github.com> Co-authored-by: Franchesca Salas <Franchess23@users.noreply.github.com> Co-authored-by: elephino <elephino@users.noreply.github.com>

--- a/Capstone-Group2/index.html
+++ b/Capstone-Group2/index.html
@@ -1,83 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- THIS IS THE LANDING PAGE -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Motley Zoo Animal Rescue</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Montley Zoo Animal Rescue</title>
 </head>
 <body>
-    <header> 
-        <img src="Images/Motley logo.jpg" alt="logo">
-            <nav>
-                <ul>
-                    <li><a href="">Home</a> </li>
-                    <li> <a href="">About</a> </li>
-                    <li><a href="">Adopt</a> </li>
-                    <li> <a href="">Get Involved</a></li>
-                </ul>
-            </nav>
-        <div>
-            <h1>About</h1>
-                <img src="Images/puppies 2.jpg" alt="image of puppies">
-        </div>
-    </header>
-    <!-- I wasnt sure if we wanted to use ID or Class -->
-    <!-- 
-        The  box image and text pattern we have 
-        is similair througout out all our pages, 
-        I was thinking we can REUSE CLASS 
-        eveywhere let me know what yall think
-    -->
-<div class="our_mission">
-    <div class="row">
-        <h2>Our Mission</h2>
-            <p>Motley Zoo Animal Rescue is dedicated to improving the lives of animals locally, nationally and internationally; alleviating their suffering and elevating their status in society through the rescue and rehabilitation of animals in need and through the education of their community on responsible pet ownership and animal welfare, advocating the value of all animal life, in hopes to end the neglect and abuse of all animals and to end the devastating pet overpopulation through spay and neuter advocacy.</p>
-                <img src="Images/ki" alt="white dog"> 
-    </div>
-</div>
+    <nav class="menu">
+        <ul>
+          <li><a href="#">Adopt!</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Get Involved</a></li>
+          <li><a href="#">Shop Merch</a></li>
+          <li><a href="#">More</a></li>
 
-<div class="Philosophy">
-    <div class="row">
-        <h2>Philosophy</h2>
-            <p>We believe that all pets are precious - and none should be left behind! Nor should they be valued by a number at the bottom of a vet bill. We founded this rescue to ensure animals wouldn't fall through the cracks; to provide "someone" to care for them when there is no one else. To date, we have been that "someone" for more than 3,800 animals - many of them medically-needy - with extensive, and expensive, needs. We spare no time or expense in helping our animals become more "adoptable" for you.</p>
-                <img src="Images/kittens.jpg" alt="Three kittens"> 
-    </div>
-</div>
+        </ul>
+      </nav>
+<h2>Our Mission</h2>
+<p>Motley Zoo Animal Rescue is dedicated to improving the lives of animals locally, nationally and internationally; alleviating their suffering and elevating their status in society through the rescue and rehabilitation of animals in need and through the education of their community on responsible pet ownership and animal welfare, advocating the value of all animal life, in hopes to end the neglect and abuse of all animals and to end the devastating pet overpopulation through spay and neuter advocacy.</p>
 
-<div class="How_it_works">
-    <div class="row">
-        <h2>How it Works</h2>
-            <p>It is important that the results of our efforts match the immense input of time, energy, funding and quality when it comes to the number of lives saved. The level of care and quality of life is as critical as making sure we are saving as many animals as possible.</p>   
-                <img src="" alt="Lady holding dog"> 
-    </div>
-</div>
+<h2>Our Impact</h2>
+<p>Motley Zoo has a 99% live release rate. This means that while less than 1% of the animals we’ve rescued have died or were humanely euthanized, we have saved 99% of them! In comparison, Washington state has an approximate 90% live release rate. In all, we’re doing pretty well in the northwest <br>.
+ However in some states, live release falls to a deplorable 40%. This means in many places around our country, more than half of the animals in shelters are put to death.<br> <font= 16>How can this be?</font>
+ <br>It is primarily because of pet overpopulation- a very controllable, human issue. Not enough people consider spaying and neutering a priority- or they can’t afford it. Whatever the reason, nearly 4 million animals lose their lives annually because unwanted litters were born when they shouldn’t have been.
+ <br>Reproduction is not rocket science. It is very simple - so is the solution: spay/neuter advocacy and adoption.
+ <br>Our goal is to maintain this 99%, high impact as we perform this critical life saving mission- as well as to decrease euthanizations nationwide.​</p>
 
-<div class="Our_team">
-    <div>
-        <h2>Our Team</h2>
-            <p>It is important that the results of our efforts match the immense input of time, energy, funding and quality when it comes to the number of lives saved. The level of care and quality of life is as critical as making sure we are saving as many animals as possible.</p>
-                <img src="" alt="Image of Team">
-    </div>
+ <h2>Happy Tails: Success Stories</h2>
+ 
 
-</div>
-    <div class="botton">
-        <p>It is important that the results of our efforts match the immense input of time, energy, funding and quality when it comes to the.</p>
-            <button type="button">Join</button>
-</div>
-
-<footer>
-    <h2>Motley ZooAnimal Rescue</h2>
-        <p>Registered 501(c)(3). EIN: 26-4338166 @2023 | Motley Zoo Animal Rescue</p>
-            <img src="Images/wa fed.jpg" alt="washington federation badge">
-                <img src="Images/Approved-Rescue_Paw-Print_Badge.png" alt="adop a peeet badge">
-</footer>
-
-    
-<!-- SOME TIPS: DON'T FORGET TO SAVE, HAVE DIVS FOR DIFFERENT SECTIONS TO HELP YOU FORMAT -->
-
-
-    <script src="/script.js"></script>
+<script src="/script.js"></script>
 </body>
-</html> 
+</html>
