delted the webp images and updates to about css

--- a/Capstone-Group2/about.html
+++ b/Capstone-Group2/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="CSS/about.css">
     <title>Motley Zoo Animal Rescue</title>
 </head>
 <body>
@@ -20,8 +20,8 @@
                 </ul>
             </nav>
         <div>
-            <h1>About</h1>
                 <img src="Images/puppies 2.jpg" alt="image of puppies">
+                    <h1>About</h1>
         </div>
     </header>
     <!-- I wasnt sure if we wanted to use ID or Class -->
@@ -43,13 +43,17 @@
     <div class="row">
         <h2>Philosophy</h2>
             <p>We believe that all pets are precious - and none should be left behind! Nor should they be valued by a number at the bottom of a vet bill. We founded this rescue to ensure animals wouldn't fall through the cracks; to provide "someone" to care for them when there is no one else. To date, we have been that "someone" for more than 3,800 animals - many of them medically-needy - with extensive, and expensive, needs. We spare no time or expense in helping our animals become more "adoptable" for you.</p>
-                <img src="Images/kittens.jpg" alt="Three kittens"> 
     </div>
+                <div class="row">
+                    <img src="Images/kittens.jpg" alt="Three kittens"> 
+                </div>
 </div>
 
 <div class="How_it_works">
     <div class="row">
         <h2>How it Works</h2>
+        </div>
+        <div class="row">
             <p>It is important that the results of our efforts match the immense input of time, energy, funding and quality when it comes to the number of lives saved. The level of care and quality of life is as critical as making sure we are saving as many animals as possible.</p>   
                 <img src="" alt="Lady holding dog"> 
     </div>
@@ -67,7 +71,7 @@
         <p>It is important that the results of our efforts match the immense input of time, energy, funding and quality when it comes to the.</p>
             <button type="button">Join</button>
 </div>
-
+<footer>
 <div class="footer">
     <h1 class="footer-header">Motley Zoo Animal Rescue
  </h1>
@@ -86,7 +90,7 @@
 <img src="Images\Approved-Rescue_Paw-Print_Badge.png" alt="adopt a pet logo">
 </a>
 </div>
-
+</footer>
     
 <!-- SOME TIPS: DON'T FORGET TO SAVE, HAVE DIVS FOR DIFFERENT SECTIONS TO HELP YOU FORMAT -->
 
