--- a/Capstone-Group2/index.html
+++ b/Capstone-Group2/index.html
@@ -30,52 +30,13 @@ However in some states, live release falls to a deplorable 40%. This means in ma
 <br>It is primarily because of pet overpopulation- a very controllable, human issue. Not enough people consider spaying and neutering a priority- or they can’t afford it. Whatever the reason, nearly 4 million animals lose their lives annually because unwanted litters were born when they shouldn’t have been.
 <br>Reproduction is not rocket science. It is very simple - so is the solution: spay/neuter advocacy and adoption.
 <br>Our goal is to maintain this 99%, high impact as we perform this critical life saving mission- as well as to decrease euthanizations nationwide.​</p>
-    <header> 
-        <img src="Images/Motley logo.jpg" alt="logo">
-            <nav>
-                <ul>
-                    <li><a href="">Home</a> </li>
-                    <li> <a href="">About</a> </li>
-                    <li><a href="">Adopt</a> </li>
-                    <li> <a href="">Get Involved</a></li>
-                </ul>
-            </nav>
-        <div>
-            <h1>About</h1>
-                <img src="Images/puppies 2.jpg" alt="image of puppies">
-        </div>
-    </header>
-    <!-- I wasnt sure if we wanted to use ID or Class -->
-    <!--  The  box image and text pattern we have is similair througout 
-        out all our pages, I was thinking we can REUSE CLASS eveywhere 
-        let me know what yall think   -->
-        
-<div class="our_mission">
-    <div class="row">
-        <h2>Our Mission</h2>
-            <p>Motley Zoo Animal Rescue is dedicated to improving the lives of animals locally, nationally and internationally; alleviating their suffering and elevating their status in society through the rescue and rehabilitation of animals in need and through the education of their community on responsible pet ownership and animal welfare, advocating the value of all animal life, in hopes to end the neglect and abuse of all animals and to end the devastating pet overpopulation through spay and neuter advocacy.</p>
-                <img src="Images/ki" alt="white dog"> 
-    </div>
-</div>
-
-<div class="Philosophy">
-    <div class="row">
-        <h2>Philosophy</h2>
-            <p>We believe that all pets are precious - and none should be left behind! Nor should they be valued by a number at the bottom of a vet bill. We founded this rescue to ensure animals wouldn't fall through the cracks; to provide "someone" to care for them when there is no one else. To date, we have been that "someone" for more than 3,800 animals - many of them medically-needy - with extensive, and expensive, needs. We spare no time or expense in helping our animals become more "adoptable" for you.</p>
-                <img src="Images/kittens.jpg" alt="Three kittens"> 
-    </div>
-</div>
-<!--  differne change -->
-<div class="How_it_works">
-    <div class="row">
-        <h2>How it Works</h2>
-            <p>It is important that the results of our efforts match the immense input of time, energy, funding and quality when it comes to the number of lives saved. The level of care and quality of life is as critical as making sure we are saving as many animals as possible.</p>   
-                <img src="" alt="Lady holding dog"> 
-    </div>
-</div>
 
 <h2>Happy Tails: Success Stories</h2>
-
+<p> Pet Name: Juillie 
+    Ikaika was with us for a while- seemingly being overlooked here too. But when his new mom saw him, she couldn't resist his charming personality and winning smile, falling head over heels for him! Now Ikaika has a comfortable, loving home to spend the rest of his golden years.
+</p>
+(insert image)
+(code for bottom of page / logo)
 
 <script src="/script.js"></script>
 </body>
