--- a/Capstone-Group2/get-involved.html
+++ b/Capstone-Group2/get-involved.html
@@ -10,12 +10,14 @@
     <title>Get Involved</title>
 </head>
 <body>
- <nav>
     <img src="Images\Motley logo.jpg" alt="Motley Zoo logo" width="150" class="logo">
-    <a href = "index.html">Home</a>
-    <a href = "about.html">About</a>
-    <a href = "adopt.html">Adopt</a>
-    <a href = "get-involved.html">Get Involved</a>
+ <nav>
+    <ul>
+        <li><a href = "index.html">Home</a> </li>
+        <li><a href = "about.html">About</a> </li>
+        <li> <a href = "adopt.html">Adopt</a> </li>
+        <li> <a href = "get-involved.html">Get Involved</a> </li>
+    </ul>
 </nav>   
 
 <div class="header">
