--- a/Capstone-Group2/get-involved.html
+++ b/Capstone-Group2/get-involved.html
@@ -22,7 +22,7 @@
 
 <div class="header">
     <img src="Images/get-involved-header.jpg" alt="blonde woman holding dog">
-<h1>Get Involved</h1>
+<h1 class="center">Get Involved</h1>
 </div>
 <div class="support">
     <h2 class="support-header">Ways to Support</h2>
