added transparent logos and my css updates

--- a/Capstone-Group2/about.html
+++ b/Capstone-Group2/about.html
@@ -13,14 +13,15 @@
         <img src="Images/Motley logo.jpg" alt="logo">
             <nav>
                 <ul>
-                    <li><a href="">Home</a> </li>
-                    <li> <a href="">About</a> </li>
-                    <li><a href="">Adopt</a> </li>
-                    <li> <a href="">Get Involved</a></li>
+                    <li><a href="index.html">Home</a> </li>
+                    <li> <a href="about.html">About</a> </li>
+                    <li><a href="adopt.html">Adopt</a> </li>
+                    <li> <a href="get-involved.html">Get Involved</a></li>
                 </ul>
             </nav>
-        <div>
-                <img src="Images/puppies 2.jpg" alt="image of puppies">
+        <div id="header_img">
+            
+                <!-- <img src="Images/puppies_2.jpg" alt="image of puppies"> -->
                     <h1>About</h1>
         </div>
     </header>
@@ -35,27 +36,30 @@
     <div class="row">
         <h2>Our Mission</h2>
             <p>Motley Zoo Animal Rescue is dedicated to improving the lives of animals locally, nationally and internationally; alleviating their suffering and elevating their status in society through the rescue and rehabilitation of animals in need and through the education of their community on responsible pet ownership and animal welfare, advocating the value of all animal life, in hopes to end the neglect and abuse of all animals and to end the devastating pet overpopulation through spay and neuter advocacy.</p>
-                <img src="Images/ki" alt="white dog"> 
+        </div>
+        <div class="row">
+            <img src="Images/white_dog.png" alt="white dog" > 
     </div>
 </div>
 
 <div class="Philosophy">
-    <div class="row">
-        <h2>Philosophy</h2>
-            <p>We believe that all pets are precious - and none should be left behind! Nor should they be valued by a number at the bottom of a vet bill. We founded this rescue to ensure animals wouldn't fall through the cracks; to provide "someone" to care for them when there is no one else. To date, we have been that "someone" for more than 3,800 animals - many of them medically-needy - with extensive, and expensive, needs. We spare no time or expense in helping our animals become more "adoptable" for you.</p>
-    </div>
                 <div class="row">
                     <img src="Images/kittens.jpg" alt="Three kittens"> 
+                </div>
+
+                <div class="row">
+                    <h2>Philosophy</h2>
+                        <p>We believe that all pets are precious - and none should be left behind! Nor should they be valued by a number at the bottom of a vet bill. We founded this rescue to ensure animals wouldn't fall through the cracks; to provide "someone" to care for them when there is no one else. To date, we have been that "someone" for more than 3,800 animals - many of them medically-needy - with extensive, and expensive, needs. We spare no time or expense in helping our animals become more "adoptable" for you.</p>
                 </div>
 </div>
 
 <div class="How_it_works">
     <div class="row">
         <h2>How it Works</h2>
-        </div>
-        <div class="row">
             <p>It is important that the results of our efforts match the immense input of time, energy, funding and quality when it comes to the number of lives saved. The level of care and quality of life is as critical as making sure we are saving as many animals as possible.</p>   
-                <img src="" alt="Lady holding dog"> 
+        </div>
+        <div class="row">   
+            <img src="Images/lady_holidng_dog.png" alt="Lady holding dog" > 
     </div>
 </div>
 
@@ -63,7 +67,9 @@
     <div>
         <h2>Our Team</h2>
             <p>It is important that the results of our efforts match the immense input of time, energy, funding and quality when it comes to the number of lives saved. The level of care and quality of life is as critical as making sure we are saving as many animals as possible.</p>
-                <img src="" alt="Image of Team">
+        </div>
+        <div class="row">
+            <img src="Images/team_img.png" alt="Image of Team">
     </div>
 
 </div>
@@ -73,8 +79,8 @@
 </div>
 <footer>
 <div class="footer">
-    <h1 class="footer-header">Motley Zoo Animal Rescue
- </h1>
+    <h2 class="footer-header">Motley Zoo Animal Rescue
+ </h210>
  <h3 class="follow-info">Follow Us</h3>
  <a href="#" class="fa fa-facebook"></a>
 <a href="#" class="fa fa-twitter"></a>
@@ -85,10 +91,16 @@
 <h4 class="contact-info">Registered 501 (c) (3). EIN: 26-4338166
     @2023 | Motley Zoo Animal Rescue
 </h4>
+<section id="footer_images">
+<div class="footer_badges">
 <img src="Images\wa fed.jpg" alt="logo of The Washington Frederation">
+</div>
+<div class="footer_badges">
 <a href="https://www.adoptapet.com/">
 <img src="Images\Approved-Rescue_Paw-Print_Badge.png" alt="adopt a pet logo">
 </a>
+</div>
+</section>
 </div>
 </footer>
     
