some new updates

--- a/Capstone-Group2/about.html
+++ b/Capstone-Group2/about.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/about.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Motley Zoo Animal Rescue</title>
 </head>
 <body>
     <header> 
-        <img src="Images/Motley logo.jpg" alt="logo">
+        <img src="Images/logo.png" alt="logo" height="80" width="150">
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a> </li>
@@ -80,9 +81,9 @@
 <footer>
 <div class="footer">
     <h2 class="footer-header">Motley Zoo Animal Rescue
- </h210>
- <h3 class="follow-info">Follow Us</h3>
- <a href="#" class="fa fa-facebook"></a>
+</h210>
+<h3 class="follow-info">Follow Us</h3>
+<a href="#" class="fa fa-facebook"></a>
 <a href="#" class="fa fa-twitter"></a>
 <a href="#" class="fa fa-instagram"></a>
 <a href="#" class="fa fa-vimeo"></a>
