footer for adopt and index

--- a/Capstone-Group2/adopt.html
+++ b/Capstone-Group2/adopt.html
@@ -7,27 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Adoption Form</title>
+    <title>Adopt</title>
 </head>
 <body>
-    
-
-<!-- Holding space for header and video and title for this page
-
-    
     <header>
-        <img src=" "  alt= "Motley Zoo logo">
-        <nav>
-            <ul>
-                <li> <a href="# ">Home</a>  </li>
-                <li> <a href="# ">About </a> </li>
-                <li> <a href="# ">Adopt</a> </li>
-                <li> <a href="# ">Get Involved</a> </li>
-            </ul>
-        </nav>
-
+        <img src="Images/Motley logo.jpg" alt="logo">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a> </li>
+                    <li> <a href="about.html">About</a> </li>
+                    <li><a href="adopt.html">Adopt</a> </li>
+                    <li> <a href="get-involved.html">Get Involved</a></li>
+                </ul>
+            </nav>
     </header>
-
+<!-- 
     <div>
           <img src=" " alt= " " >
 
@@ -96,7 +90,24 @@
 
 
 </div>
-
+div class="footer">
+<h1 class="footer-header">Motley Zoo Animal Rescue
+</h1>
+<h3 class="follow-info">Follow Us</h3>
+<a href="#" class="fa fa-facebook"></a>
+<a href="#" class="fa fa-twitter"></a>
+<a href="#" class="fa fa-instagram"></a>
+<a href="#" class="fa fa-vimeo"></a>
+<a href="#" class="fa fa-youtube"></a>
+<a href="#" class="fa fa-pinterest"></a>
+<h4 class="contact-info">Registered 501 (c) (3). EIN: 26-4338166
+    @2023 | Motley Zoo Animal Rescue
+</h4>
+<img src="Images\wa fed.jpg" alt="logo of The Washington Frederation">
+<a href="https://www.adoptapet.com/">
+<img src="Images\Approved-Rescue_Paw-Print_Badge.png" alt="adopt a pet logo">
+</a>
+</div>
 
 
     <script src="/script.js"></script>
