--- a/Capstone-Group2/index.html
+++ b/Capstone-Group2/index.html
@@ -39,6 +39,30 @@ However in some states, live release falls to a deplorable 40%. This means in ma
 (code for bottom of page / logo)
 
 <script src="/script.js"></script>
+
+
+
+
+
+<div class="footer">
+    <h1 class="footer-header">Motley Zoo Animal Rescue
+ </h1>
+ <h3 class="follow-info">Follow Us</h3>
+ <a href="#" class="fa fa-facebook"></a>
+<a href="#" class="fa fa-twitter"></a>
+<a href="#" class="fa fa-instagram"></a>
+<a href="#" class="fa fa-vimeo"></a>
+<a href="#" class="fa fa-youtube"></a>
+<a href="#" class="fa fa-pinterest"></a>
+<h4 class="contact-info">Registered 501 (c) (3). EIN: 26-4338166
+    @2023 | Motley Zoo Animal Rescue
+</h4>
+<img src="Images\wa fed.jpg" alt="logo of The Washington Frederation">
+<a href="https://www.adoptapet.com/">
+<img src="Images\Approved-Rescue_Paw-Print_Badge.png" alt="adopt a pet logo">
+</a>
+</div>
+
+<script src="/script.js"></script>
 </body>
 </html>
-8
