--- a/Capstone-Group2/landing.html
+++ b/Capstone-Group2/landing.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>  </title>
+    <title> MotleyZoo </title>
     <h1> Our Mission </h1>
     <p> 
         Motley Zoo Animal Resuce is dedicated to improving the lives of animal locally, ... (ask why its all on one line)
@@ -14,7 +14,8 @@
     <h2> Our Impact </h2>
     <p> It is important that the results of our efforts match the immense input of the time,energym funding and quality whne it comes to the number of lives saved. The level of care and quality of life is as critical as making sure we are saving as many animals as possible.
     </p>
-    (images placed here)
+    <!-- (images placed here) -->
+
     <h3> Happy Tails: Success Stories </h3>
     <p> Pet Name: Juillie 
         Ikaika was with us for a while- seemingly being overlooked here too. But when his new mom saw him, she couldn't resist his charming personality and winning smile, falling head over heels for him! Now Ikaika has a comfortable, loving home to spend the rest of his golden years.
