adopt page updated

--- a/Capstone-Group2/about.html
+++ b/Capstone-Group2/about.html
@@ -94,7 +94,7 @@
 </h4>
 <section id="footer_images">
 <div class="footer_badges">
-<img src="Images\wa fed.jpg" alt="logo of The Washington Frederation">
+<img src="Images\wa fed.jpg" alt="logo of The Washington Federation">
 </div>
 <div class="footer_badges">
 <a href="https://www.adoptapet.com/">
