--- a/Capstone-Group2/get-involved.html
+++ b/Capstone-Group2/get-involved.html
@@ -73,7 +73,7 @@
 <h4 class="contact-info">Registered 501 (c) (3). EIN: 26-4338166
     @2023 | Motley Zoo Animal Rescue
 </h4>
-<img src="Images\wa fed.jpg" alt="logo of The Washington Frederation">
+<img src="Images\wa fed.jpg" alt="logo of The Washington Federation">
 <a href="https://www.adoptapet.com/">
 <img src="Images\Approved-Rescue_Paw-Print_Badge.png" alt="adopt a pet logo">
 </a>
