"Note the Changes" -m

--- a/Capstone-Group2/get-involved.html
+++ b/Capstone-Group2/get-involved.html
@@ -32,7 +32,7 @@
          because what matters to you will become crystal-clear.</p> 
 </div>
 <div class="volunteer">
-    <img src="Images\puppies 3.jpg" class="support-img" alt="photo of black yorkshire puppy">
+    <div class="info">
     <h2 class="volunteer-header">Volunteer</h2>
     <p class="volunteer-text">Motley Zoo Animal Rescue is a purely volunteer-based organization dedicated to helping animals.  
         We are always in need of caring people to volunteer - 
@@ -40,8 +40,11 @@
     </p>
     <button type="button">Apply Here</button>
 </div>
+    <img src="Images\puppies 3.jpg" class="support-img" alt="photo of black yorkshire puppy">
+</div>
 <div class="foster">
     <img src="Images\kittens.jpg" class="foster-image" alt="group of black and white kittens">
+<div class="foster-info">
     <h2 class="foster-header">
         Foster
     </h2>
@@ -50,6 +53,7 @@
         until a “fur-ever” home is found.We encourage you to check out more about fostering here.
     </p>
     <button type="button">Apply Here</button>
+</div>
 </div>
 <div class="donate">
     <img src="Images\smiling dog.jpg" class="donate-image" alt="photo of smiling dog">
