--- a/Capstone-Group2/get-involved.html
+++ b/Capstone-Group2/get-involved.html
@@ -38,7 +38,7 @@
         We are always in need of caring people to volunteer - 
         we have a variety of duties and tasks for which we always need help! E-mail us: volunteer@motleyzoo.org.
     </p>
-    <button type="button">Apply Here</button>
+    <button type="button" class="click">Apply Here</button>
 </div>
     <img src="Images\puppies 3.jpg" class="support-img" alt="photo of black yorkshire puppy">
 </div>
@@ -52,35 +52,43 @@
         Fosters take a pet into their home, and watch him/ her like one of their own, 
         until a “fur-ever” home is found.We encourage you to check out more about fostering here.
     </p>
-    <button type="button">Apply Here</button>
+    <button type="button" class="click">Apply Here</button>
 </div>
 </div>
 <div class="donate">
-    <img src="Images\smiling dog.jpg" class="donate-image" alt="photo of smiling dog">
+    <div class="donate-info">
     <h2 class="donate-header">Donate
     </h2>
     <p class="donate-text">Any donation made - no matter how small - beats giving absolutely nothing at all.
          Plus, you can maximize your impact with a recurring gift!
         </p>
-        <button type="button">Donate Here</button>
+        <button type="button" class="click">Donate Here</button>
+    </div>
+        <img src="Images\smiling dog.jpg" class="donate-image" alt="photo of smiling dog">
 </div>
 <div class="footer">
     <h1 class="footer-header">Motley Zoo Animal Rescue
  </h1>
- <h3 class="follow-info">Follow Us</h3>
+ <div class="footer-info">
+ <h3 class="follow">Follow Us</h3>
+ <div class="fav">
  <a href="#" class="fa fa-facebook"></a>
 <a href="#" class="fa fa-twitter"></a>
 <a href="#" class="fa fa-instagram"></a>
 <a href="#" class="fa fa-vimeo"></a>
 <a href="#" class="fa fa-youtube"></a>
 <a href="#" class="fa fa-pinterest"></a>
+</div>
 <h4 class="contact-info">Registered 501 (c) (3). EIN: 26-4338166
     @2023 | Motley Zoo Animal Rescue
 </h4>
-<img src="Images\wa fed.jpg" alt="logo of The Washington Federation">
+</div>
+<div class="footer-logos">
+<img src="Images\wa fed.jpg" alt="logo of The Washington Federation" class="logo-1">
 <a href="https://www.adoptapet.com/">
-<img src="Images\Approved-Rescue_Paw-Print_Badge.png" alt="adopt a pet logo">
+<img src="Images\Approved-Rescue_Paw-Print_Badge.png" alt="adopt a pet logo" class="logo-2">
 </a>
+</div>
 </div>
     <script src="/script.js"></script>
 </body>
