changed size of logo

--- a/Capstone-Group2/about.html
+++ b/Capstone-Group2/about.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header> 
-        <img src="Images/logo.png" alt="logo" height="80" width="150">
+        <img src="Images/logo.png" alt="logo" height="71px" width="343px">
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a> </li>
