--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
 <body>
     <nav class="menu">
         <ul>
-            <li><a href="#">Adopt!</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Get Involved</a></li>
-            <li><a href="#">Shop Merch</a></li>
-            <li><a href="#">More</a></li>
+            <li><a href = "index.html">Home</a> </li>
+            <li><a href = "about.html">About</a> </li>
+            <li> <a href = "adopt.html">Adopt</a> </li>
+            <li> <a href = "get-involved.html">Get Involved</a> </li>
 
         </ul>
         </nav>
